--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moments",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.2"
